--- a/css/main.css
+++ b/css/main.css
@@ -978,6 +978,10 @@ footer .bot-menu span{
   font-family: SukhumvitSet-Bold;
   color: #FFFFFF;
 }
+.map-nav span{ 
+  color: #FFB800;
+}
+
 
 .category-sec{
   background: #E5E5E5; 
@@ -1017,7 +1021,7 @@ footer .bot-menu span{
 }
 .bootstrap-select .btn .filter-option-inner-inner{
   font-family: SukhumvitSet-Bold;  
-  font-size: 14px;
+  font-size: 13px;
   line-height: 26px;  
   color: #374757; 
 }
@@ -1552,8 +1556,452 @@ iframe{
   text-align: center; 
   color: #FFFFFF;
 }
+.top-detail > div{ 
+  height: 136px;   
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1); 
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+.top-detail > div:nth-child(1){  
+  background: #1F4D8E;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1); 
+  border-radius: 20px 0 0 20px;
+  padding: 8px 22px 6px;
+}
+.top-detail > div:nth-child(2){
+  background: #EEEEEE;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1); 
+  border-radius: 0 20px 20px  0 ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-/* transition: .33s all ease-out;  */
+.top-detail h2{  
+  font-family: SukhumvitSet-Bold;  
+  font-size: 18px;
+  line-height: 24px; 
+  color: #FFD964;
+  margin-bottom: 0px;
+}
+.top-detail h6{  
+  font-family: SukhumvitSet-Text;  
+  font-size: 14px;
+  line-height: 22px; 
+  color: #FFFFFF;
+  margin-bottom: 0px;
+}
+.top-detail span i{  
+  color: #FFB800;
+}
+.top-detail span{  
+  font-family: SukhumvitSet-Text;  
+  font-size: 16px;
+  line-height: 25px; 
+  color: #FFFFFF;
+}
+.top-detail h4{  
+  font-family: SukhumvitSet-Text;  
+  font-size: 16px;
+  line-height: 25px; 
+  color: #FFFFFF;
+}
+.top-detail img{  
+  height: 42px;
+  width: 42px; 
+} 
+.top-detail .optix > div{   
+  margin-right: 15px;
+  margin-left: 15px;
+} 
+.top-detail h5{  
+  font-family: SukhumvitSet-Text;  
+  font-size: 12px;
+  line-height: 19px;  
+  color: #979797;
+} 
+.top-detail h5 span{   
+  font-family: SukhumvitSet-Text; 
+  font-size: 12px;
+  line-height: 19px;  
+  color: #5681BF;
+}
+.img-view{
+  height: 573px;
+  background-position: center center !important;
+  background-repeat: no-repeat !important;
+  background-size: 100% auto !important;
+  border-radius: 40px 0px 0px 40px;
+  margin-bottom: 80px;
+  position: relative;
+}
+.img-view-sub > div{
+  height: 181px;
+  background-position: center center !important;
+  background-repeat: no-repeat !important;
+  background-size: 100% auto !important; 
+  margin-bottom: 15px;
+}
+.img-view-sub > div:nth-child(1){
+  border-radius: 0px 40px 0px 0px;
+}
+.img-view-sub > div:nth-child(3){ 
+  border-radius: 0px 0px 40px 0px; 
+  position: relative;
+}
+.img-view-sub > div:nth-child(3) p{
+  position: absolute; 
+  font-family: SukhumvitSet-Bold; 
+  border-radius: 0px 0px 40px 0px;
+  font-size: 32px;
+  line-height: 51px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  color: #374757;
+  height: 100%;
+  width: 100%;
+}
+.img-view-sub > div:nth-child(3)::before{
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 100%; 
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 0px 0px 40px 0px;
+}
+.btn-print{
+  font-family: SukhumvitSet-Text; 
+  position: absolute;
+  right: 25px;
+  top: 35px;
+  background: rgba(255, 255, 255, 0.9); 
+  border-radius: 10px;
+  width: 87px;
+  height: 40px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 22px;
+  text-align: center; 
+  color: #374757 !important;
+  padding-top: 10px;
+  transition: .33s all ease-out; 
+}
+.btn-share{
+  font-family: SukhumvitSet-Text; 
+  position: absolute;
+  right: 120px;
+  top: 35px;
+  background: rgba(255, 255, 255, 0.9); 
+  border-radius: 10px;
+  width: 87px;
+  height: 40px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 22px;
+  text-align: center; 
+  color: #374757 !important;
+  padding-top: 10px;
+  transition: .33s all ease-out; 
+}
+
+.btn-print:hover{
+  background: rgba(255, 255, 255, 1); 
+}
+.btn-share:hover{
+  background: rgba(255, 255, 255,1);  
+}
+
+.footer-sub .img-responsive .center-block{ 
+  height: 80px;
+}
+.rent-sell{
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.label-rent{
+  position: relative;
+  background: rgba(255, 255, 255, 0.9); 
+  border-radius: 20px;
+  width: 301px;
+  height: 62px;
+  margin-left: 20px;
+  margin-top: 35px;
+  padding: 10px 15px 10px 17px; 
+  display: inline-block;
+  transition: .33s all ease-out;
+}
+.label-rent:hover{
+  background: rgba(255, 255, 255,1);  
+}
+.label-rent h1{ 
+  text-align: right;
+  font-family: SukhumvitSet-Bold; 
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 44px; 
+  color: #DD4939;
+  align-items: center;
+}
+.label-rent > div{ 
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 121px;
+  height: 62px;  
+  background: #DD4939;
+  border-radius: 20px 0px 0px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center; 
+}
+.label-rent > div span:nth-child(1){ 
+  font-family: SukhumvitSet-Bold; 
+  border-right: 1px solid #fff;
+  font-size: 28px;
+  line-height: 44px; 
+  color: #FFFFFF;
+  padding-right: 15px;
+  margin-right: 10px;
+}
+.label-rent > div span:nth-child(2){ 
+  font-family: SukhumvitSet-Text;  
+  font-size: 14px;
+  line-height: 17px;  
+  color: #FFFFFF;
+}
+.box-view{
+  position: absolute;
+  left: 5px;
+  bottom: -77px; 
+  display: flex;
+}
+.box-view .box-view-type {
+  width: 210px;
+  height: 140px;
+  margin-left: 15px;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 20px; 
+  position: relative;
+}
+.box-view .box-view-type div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 103px;
+  width: 210px; 
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: 100% auto !important; 
+  border-radius: 20px 20px 0 0; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.box-view .box-view-type div img{
+  width: 80px;
+}
+
+
+.box-view .box-view-type h3 {
+  position: absolute;
+  bottom: 0; 
+  font-family: SukhumvitSet-Bold;  
+  font-size: 16px;
+  line-height: 15px;
+  text-align: center; 
+  color: #222222;
+  width: 100%;
+}
+.main-description{
+  margin-top: 20px;
+  padding-bottom: 50px;
+}
+.main-description h2{
+  font-family: SukhumvitSet-Bold;   
+  font-size: 26px;
+  line-height: 41px; 
+  color: #374757;
+  margin-top: 35px;
+}
+.main-description h6{
+  font-family: SukhumvitSet-Bold;    
+  font-size: 18px;
+  line-height: 29px; 
+  color: #222222;
+}
+.room-feature {
+  font-family: SukhumvitSet-Thin;    
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 34px; 
+  color: #222222; 
+  padding-left: 34px;
+  margin-bottom: 10px;
+  position: relative;
+  font-weight: bold;
+}
+.room-feature img{
+  position: absolute;
+  left: 0;
+  height: 24px;
+}
+.basic-information{
+  width: 874px;
+  height: 737px; 
+  border-radius: 10px;
+  background-color: #F5F7FA;
+  padding: 23px 34px 22px;
+} 
+.basic-information h4{
+  font-family: SukhumvitSet-Thin;    
+  font-weight: bold;
+  border-bottom: 1px dashed #979797;
+  font-size: 18px;
+  line-height: 29px; 
+  color: #222222;
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+} 
+.basic-information h4:last-child{
+  border-bottom: 0px dashed #979797;
+} 
+.basic-information h4 span{ 
+  color: #5681BF;
+}
+.information{ 
+  left: 971px;
+  top: 992px;
+  padding: 20px 14px 24px;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+}
+.information h3{
+  font-family: SukhumvitSet-Bold;    
+  text-align: center;
+  font-size: 18px;
+  line-height: 29px; 
+  color: #222222;
+}
+.information form input{
+  font-family: SukhumvitSet-Thin;    
+  font-weight: bold;
+  height: 40px; 
+  background: #F2F2F2;
+  opacity: 0.9;
+  border: 1px solid #DADADA;
+  border-radius: 4px;
+} 
+.information form textarea{
+  font-family: SukhumvitSet-Thin;    
+  font-weight: bold;
+  height: 75px; 
+  background: #F2F2F2;
+  opacity: 0.9;
+  border: 1px solid #DADADA;
+  border-radius: 4px;
+}
+.information form button{
+  font-family: SukhumvitSet-Thin;    
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 29px; 
+  text-align: center; 
+  color: #FFFFFF; 
+  width: 100%;
+  height: 40px; 
+  background: #DD4939;
+  opacity: 0.9;
+  border-radius: 10px;
+  transition: .33s all ease-out;
+}
+.information form button:hover{
+  background: #F82913;
+  color: #FFFFFF; 
+}
+.information h2{
+  font-family: SukhumvitSet-Bold;    
+  text-align: center;
+  font-size: 18px;
+  line-height: 29px; 
+  color: #222222;
+  margin-top: 30px;
+  margin-bottom: 25px;
+} 
+.information .btn-social{
+  font-family: SukhumvitSet-Thin;    
+  font-weight: bold;
+  height: 40px; 
+  background: #FFFFFF; 
+  border: 1px solid #AFAFAF;
+  border-radius: 10px;
+  font-size: 18px;
+  line-height: 29px; 
+  text-align: center; 
+  color: #374757;
+  transition: .33s all ease-out;
+  margin-bottom: 12px;
+  display: block;
+}
+.information .btn-social:hover{ 
+  background: #DADADA;   
+  color: #374757;
+  border: 1px solid #AFAFAF;
+}
+.project-detail{
+  display: flex;
+
+}
+.project-detail .img{
+  display: flex;
+  width: 334px;
+  height: 248px;  
+  border-radius: 10px;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: 100% auto !important; 
+  margin-right: 33px;
+}
+.project-detail .text{
+  list-style: none;
+  padding-left: 0px;
+}
+.project-detail .text li p{
+  font-family: SukhumvitSet-Thin;    
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 27px; 
+  color: #222222;
+} 
+.project-detail .text li p{
+  width: 175px;
+  float: left;
+  margin-bottom: 0px;   
+}
+.project-detail .text li p:nth-child(2){
+  width: 315px;  
+}
+.project-detail .text li p span{
+  color: #5681BF;  
+}
+
+
+
+
+
+
+
+/* 
+
+transition: .33s all ease-out;
+
+*/
    
 /* 
 EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE 
