--- a/css/main.css
+++ b/css/main.css
@@ -1829,6 +1829,12 @@ iframe{
   color: #374757;
   margin-top: 35px;
 }
+.main-description h2 span{ 
+  color: #FFB800; 
+}
+.main-description h2 b{ 
+  color: #DD4939; 
+}
 .main-description h6{
   font-family: SukhumvitSet-Bold;    
   font-size: 18px;
@@ -1849,6 +1855,7 @@ iframe{
 .room-feature img{
   position: absolute;
   left: 0;
+  top: 4px;
   height: 24px;
 }
 .basic-information{
@@ -1989,11 +1996,344 @@ iframe{
 }
 .project-detail .text li p span{
   color: #5681BF;  
+} 
+
+.loan-calculation{ 
+  height: 363px; 
+  border-radius: 10px;
+  background-color: #F5F7FA;
+  padding: 25px 39px;
+} 
+.loan-calculation label{
+  font-family: SukhumvitSet-Thin;    
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 34px; 
+  color: #222222; 
+}
+.loan-calculation input{
+  font-family: SukhumvitSet-Thin;    
+  font-weight: bold;
+  height: 46px; 
+  background: #FFFFFF;
+  border: 1px solid #979797;
+  border-radius: 4px;
+  padding-left: 56px;
+  padding-right: 60px;
+}
+.loan-calculation input + p{
+  position: absolute;
+  margin-top: -40px;
+  margin-left: 17px;
+  font-size: 14px;
+  line-height: 22px; 
+  font-family: SukhumvitSet-Bold;     
+  color: #374757;
+  border-right: 1px solid #DADADA;
+  padding-right: 13px;
+}
+.loan-calculation input + p + span{
+  position: absolute;
+  right: 0;
+  margin-top: -40px;
+  margin-right: 30px;
+  font-size: 14px;
+  line-height: 22px; 
+  font-family: SukhumvitSet-Bold;      
+  text-align: right; 
+  color: #979797;
+}
+.loan-calculation input{
+  margin-bottom:  5px;
+}
+.main-description canvas{
+  display: block;
+  margin: auto;
+}
+.main-description canvas + h4{
+  font-size: 18px;
+  line-height: 34px; 
+  color: #222222;
+  font-family: SukhumvitSet-Bold;     
+  text-align: center;
+  margin-top: 20px;
+} 
+.data-doughnut{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.data-doughnut ul{
+  padding-left: 0;
+  list-style: none;
+  margin-top: 30px;
+}
+.data-doughnut ul li{
+  font-family: SukhumvitSet-Bold;     
+  font-size: 12px;
+  line-height: 32px; 
+  color: #000000;
+  padding-left: 20px;
+  position: relative;
+}
+.data-doughnut ul li div{
+  position: absolute;
+  left: 0;
+  width: 12px;
+  height: 12px;  
+  border-radius: 100%;
+  margin-top: 9px;
+} 
+.data-doughnut ul li.doughnut1 div{ 
+  background: #1F4D8E; 
+}
+.data-doughnut ul li.doughnut2 div{ 
+  background: #FFB800; 
+}
+.btn-request{
+  font-family: SukhumvitSet-Bold;     
+  width: 167px;
+  height: 40px;  
+  background: #1F4D8E;
+  opacity: 0.9;
+  border-radius: 10px; 
+  font-size: 18px;
+  line-height: 29px; 
+  text-align: center; 
+  color: #FFFFFF;
+  transition: .33s all ease-out;
+}
+.btn-request:hover{ 
+  background: #3B5998; 
+  color: #FFFFFF;
+}
+.available .sel1{
+  width: 122px !important; 
+} 
+.available .bootstrap-select .btn .filter-option-inner-inner{
+  line-height: 32px;
+}
+.available .sel1 + .btn{
+  width: 122px; 
+  height: 46px;  
+} 
+.available .sel2{
+  width: 307px !important; 
+} 
+.available .sel2 + .btn{
+  width: 307px; 
+  height: 46px;  
+} 
+.available  .bootstrap-select{
+  margin-left: 10px !important;
+}
+.available .btn-sel{
+  font-family: SukhumvitSet-Thin;    
+  font-weight: bold;
+  width: 96px;
+  height: 46px;  
+  background: #FFFFFF;
+  border: 1px solid #979797;
+  border-radius: 10px;
+  font-size: 14px;
+  line-height: 22px; 
+  color: #374757;
+  margin-left: 10px; 
+  transition: .33s all ease-out;
+} 
+.available .btn-sel:hover{
+  background: #1F4D8E;
+  color: #fff;
+}
+.available .btn-sel.active{
+  background: #1F4D8E;
+  color: #fff;
+} 
+.available-card > .row > div .condo-card{
+  width: 100% !important;
+  height: unset !important;
+  padding-bottom: 25px;
+}
+.available-card .option2{
+  display: flex;
+  margin-top: -20px;
+  border-top: 1px solid #E5E5E5;
+  padding-top: 12px;
+  border-bottom: 1px solid #E5E5E5;
+  padding-bottom: 12px;
+  margin-bottom: 20px;
+} 
+.available-card .option2 p{ 
+  font-family: SukhumvitSet-Thin;    
+  font-weight: bold;
+  position: relative;
+  width: 50%;
+  font-size: 14px;
+  line-height: 22px; 
+  color: #374757;
+  padding-left: 20px;
+  margin-bottom: 0px;
+}
+.available-card .option2 p:after{ 
+  content: "";
+  left: 0;
+  margin-top: 8px;
+  position: absolute;
+  height: 5px;
+  width: 5px;
+  border-radius: 100%;
+  background-color: #374757;
+}
+.available-card .condo-card .btn-unit{
+  font-family: SukhumvitSet-Bold;   
+  width: 137px;
+  height: 40px; 
+  background: #1F4D8E;
+  border-radius: 10px;
+  font-size: 18px;
+  line-height: 29px; 
+  text-align: center; 
+  color: #FFFFFF;
+  margin-right: 2px;
+} 
+
+.available-card .condo-card .btn-des{
+  font-family: SukhumvitSet-Thin;    
+  font-weight: bold;
+  width: 137px;
+  height: 40px; 
+  background: #FFB800;
+  border-radius: 10px;
+  font-size: 18px;
+  line-height: 29px; 
+  text-align: center; 
+  color: #FFFFFF;
+  margin-left: 2px;
+} 
+
+.available-card .option3{
+  display: flex; 
+  justify-content: center;
+} 
+.bg-unit{
+  background: #E5E5E5;
+ 
+} 
+.box-lat{ 
+  border-radius: 20px;
+  margin-top: 40px;
+  height: 332px; 
+  background: url(../images/bg-last.png) ,  #374757 ;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 100% auto; 
+  background-blend-mode: luminosity; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.box-lat h1{ 
+  font-family: SukhumvitSet-Bold;    
+  font-size: 32px;
+  line-height: 51px;
+  text-align: center; 
+  color: #FFFFFF;
+} 
+.box-lat h4{ 
+  font-family: SukhumvitSet-Thin;    
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 41px;
+  text-align: center; 
+  color: #FFFFFF;
+  margin-bottom: 30px;
+}
+.box-lat .btn{ 
+  font-family: SukhumvitSet-Thin;    
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 32px; 
+  text-align: center; 
+  color: #FFFFFF;
+  width: 274px;
+  height: 46px;  
+  border-radius: 10px;
+  margin: 4px;
+}
+.box-lat .btn:nth-child(1){ 
+  background: #FFB800;
+}
+.box-lat .btn:nth-child(2){ 
+  background: #DD4939;
+}
+.bg-last-box{
+  background-color: #fff; 
+  padding-bottom: 30px;
+}
+.view-project{
+  text-align: center;
+}
+.view-project .img{
+  margin-bottom: 30px;
+  height: 191px;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: 100% auto !important; 
+  border-radius: 10px;
+}
+.view-project h3{ 
+  font-family: SukhumvitSet-Bold;     
+  font-size: 26px;
+  line-height: 52px; 
+  text-align: center; 
+  color: #5681BF; 
+  border-bottom: 1px solid #DADADA;
+} 
+.view-project h4{ 
+  font-family: SukhumvitSet-Bold;     
+  font-size: 22px;
+  line-height: 52px; 
+  text-align: center; 
+  color: #374757; 
+  border-bottom: 1px solid #DADADA;
+} 
+.view-project h3.m{ 
+  height: 105px;
+} 
+.view-project h3.m span{ 
+  color: #374757;
+  font-size: 18px;
+}  
+.view-project h3.m span b{ 
+  color: #4EA854; 
+} 
+
+.add-project .img{
+  margin-bottom: 30px;
+  height: 191px;
+  background: #F5F5F5;
+  border: 1px solid #D8D8D8;
+  border-radius: 10px; 
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+.add-project .img img{
+  height: 40px;
 }
 
-
-
-
+.add-project h3{ 
+  padding-left: 45px;
+  font-family: SukhumvitSet-Bold;     
+  font-size: 22px;
+  line-height: 52px;
+  border: 1px solid #fff;
+  color: #374757; 
+}   
+.add-project h3.m{ 
+  height: 105px;
+} 
 
 
 
